fix: contrast of rich link url

--- a/elements/src/components/pos-rich-link/pos-rich-link.css
+++ b/elements/src/components/pos-rich-link/pos-rich-link.css
@@ -17,7 +17,7 @@ p.content {
 
   .url {
     font-size: var(--scale-fluid-1);
-    color: var(--color-grey-500);
+    color: var(--pos-subtle-text-color);
   }
 }
 
